force-app/main/default/objects/temporal_Telefonos__c/temporal_Telefonos__c.object-meta.xml
<CustomObject>
    <label>Temporal Telefono</label>
    <nameField>
        <label>Temporal Telefono</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Telefonos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>