force-app/main/default/objects/temporal_Telefonos__c/fields/TL_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>TL_ALUMNO__c</fullName>
    <label>TL_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>