force-app/main/default/objects/temporal_Telefonos__c/fields/TL_EXTEN__c.field-meta.xml
<CustomField>
    <fullName>TL_EXTEN__c</fullName>
    <label>TL_EXTEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>