force-app/main/default/objects/temporal_Telefonos__c/fields/TL_NUMEROS__c.field-meta.xml
<CustomField>
    <fullName>TL_NUMEROS__c</fullName>
    <label>TL_NUMEROS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>