force-app/main/default/objects/temporal_Telefonos__c/fields/TL_PREFER__c.field-meta.xml
<CustomField>
    <fullName>TL_PREFER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TL_PREFER</label>
    <type>Checkbox</type>
</CustomField>