force-app/main/default/objects/temporal_Telefonos__c/fields/TL_TIPO__c.field-meta.xml
<CustomField>
    <fullName>TL_TIPO__c</fullName>
    <label>TL_TIPO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>