force-app/main/default/objects/temporal_Telefonos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>DDDKEY__c</columns>
    <columns>P_DDDKEY__c</columns>
    <columns>TL_ALUMNO__c</columns>
    <columns>TL_NUMEROS__c</columns>
    <columns>TL_EXTEN__c</columns>
    <columns>TL_TIPO__c</columns>
    <columns>TL_PREFER__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TL_ALUMNO__c</field>
        <operation>equals</operation>
        <value>07537</value>
    </filters>
    <label>All Records</label>
</ListView>